[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/OrganizerEntry.gd" type="Script" id=1]
[ext_resource path="res://ui/OrganizerEditNameButton.tscn" type="PackedScene" id=2]

[node name="OrganizerEntry" type="PanelContainer"]
margin_right = 286.0
margin_bottom = 28.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 279.0
margin_bottom = 27.0

[node name="Label" type="Button" parent="HBoxContainer"]
margin_right = 248.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Entry"
flat = true
align = 0

[node name="EditNameButton" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 252.0
margin_right = 272.0
[connection signal="pressed" from="HBoxContainer/EditNameButton" to="." method="edit_name"]
